--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,83 @@
 __pycache__/
-*.pyc
-.venv
-.env
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+*.manifest
+*.spec
+pip-log.txt
+pip-delete-this-directory.txt
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
 *.log
-*.pot
+local_settings.py
 db.sqlite3
-*.sqlite3
+db.sqlite3-journal
 media/
-.DS_Store
+staticfiles/
+
+instance/
+.webassets-cache
+
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+*.key
+*.pem
+.secret
+/static/
+/media/
+set_password.py
+temp_*.py
+
+docs/_build/
+
+*.bak
+*.backup
