--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ djoser==2.2.3
 drf-yasg==1.21.7
 PyYAML==6.0.1
 uritemplate==4.1.1
+psycopg2-binary==2.9.9
+dj-database-url==2.1.0
+cloudinary==1.36.0
+django-cloudinary-storage==0.3.0
+whitenoise==6.6.0
