--- a/vercel.json
+++ b/vercel.json
@@ -26,5 +26,13 @@
         "src": "/(.*)",
         "dest": "core/wsgi.py"
       }
-    ]
+    ],
+    "env": {
+      "DJANGO_SETTINGS_MODULE": "core.settings"
+    },
+    "build": {
+      "env": {
+        "DJANGO_SETTINGS_MODULE": "core.settings"
+      }
+    }
 }
