--- a/vercel.json
+++ b/vercel.json
@@ -8,13 +8,6 @@
           "maxLambdaSize": "15mb", 
           "runtime": "python3.9"
         }
-      },
-      {
-        "src": "build_files.sh",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "staticfiles"
-        }
       }
     ],
     "routes": [
@@ -26,5 +19,8 @@
         "src": "/(.*)",
         "dest": "core/wsgi.py"
       }
-    ]
+    ],
+    "env": {
+      "DJANGO_SETTINGS_MODULE": "core.settings"
+    }
 }
