--- a/vercel.json
+++ b/vercel.json
@@ -1,36 +1,8 @@
 {
-    "version": 2,
     "builds": [
       {
         "src": "core/wsgi.py",
-        "use": "@vercel/python",
-        "config": { 
-          "maxLambdaSize": "15mb", 
-          "runtime": "python3.9"
-        }
+        "use": "@vercel/python"
       }
-    ],
-    "routes": [
-      {
-        "src": "/static/(.*)",
-        "dest": "/static/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "core/wsgi.py"
-      }
-    ],
-    "env": {
-      "DJANGO_SETTINGS_MODULE": "core.settings"
-<<<<<<< HEAD
-    }
+    ]
 }
-=======
-    },
-    "build": {
-      "env": {
-        "DJANGO_SETTINGS_MODULE": "core.settings"
-      }
-    }
-}
->>>>>>> a281c65b20c7873644fa8d56e3122a24d35bad87
