--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,16 @@
 {
-  "version": 2,
-  "builds": [
-    {
+  "builds": [{
       "src": "core/wsgi.py",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    }
-  ],
+      "config": {
+          "maxLambdaSize": "15mb",
+          "runtime": "python3.12.2"
+      }
+  }],
   "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "core/wsgi.py"
-    }
-  ],
-  "env": {
-    "DJANGO_SETTINGS_MODULE": "core.settings",
-    "PYTHONPATH": "/var/task"
-  },
-  "build": {
-    "env": {
-      "DJANGO_SETTINGS_MODULE": "core.settings"
-    }
-  }
+      {
+          "src": "/(.*)",
+          "dest": "core/wsgi.py"
+      }
+  ]
 }
